<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dbug.toshltest.activities.EditEntryActivity"
    android:padding="@dimen/standard_activity_padding">

    <TextView
        android:text="@string/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/description_hint"
        android:ems="10"
        android:id="@+id/change_description"/>

    <TextView
        android:text="@string/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/amount_hint"
        android:id="@+id/change_amount" />

    <TextView
        android:text="@string/edit_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/category_hint"
        android:ems="10"
        android:id="@+id/change_category" />

    <TextView
        android:text="@string/edit_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/tags_hint"
        android:ems="10"
        android:id="@+id/change_tags" />
</LinearLayout>
