<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dbug.toshltest.activities.AddEntryActivity">


    <TextView
        android:text="@string/add_entry_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle"
        android:layout_marginTop="24dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/description_hint"
        android:padding="8dp"
        android:ems="10"
        android:id="@+id/entry_description_edit" />

    <TextView
        android:text="@string/add_entry_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/amount_hint"
        android:padding="8dp"
        android:id="@+id/entry_amount_edit" />

    <TextView
        android:text="@string/add_entry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle" />

    <TextView
        android:text="2016-10-19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/entry_date_text"
        android:padding="8dp"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"/>

    <TextView
        android:text="@string/add_entry_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/category_hint"
        android:ems="10"
        android:id="@+id/entry_category_edit"
        android:padding="8dp" />

</LinearLayout>
